[package]
name = "state-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
anemo = { workspace = true }
consensus-network-types = { workspace = true }

[lints]
workspace = true
